--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -11,6 +11,12 @@
             <div id="griglia"></div>
             <br>
             <div id="spazioNumeri"></div>
+            <br>
+            <br>
+            <div id="controlli">
+                <div id="invio" class="bottoni">Invia</div>
+                <div id="reset" class="bottoni">Reset</div>
+            </div>
         </div>
     </body>
 </html>
