aggiunta commenti e modifica alla generazione

--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -15,7 +15,7 @@
             <div id="controlli">
                 <button class="bottoni" onclick="FineGioco()">Invia</button>
                 <button class="bottoni" onclick="AutoCompleta()">Auto</button>
-                <button class="bottoni" onclick="RicominciaGioco()">Reset</button>
+                <button class="bottoni" onclick="Reset()">Reset</button>
             </div>
         </div>
     </body>
